unpackaged/main/default/objects/OrderApi__Campaign_Page__c/OrderApi__Campaign_Page__c.object-meta.xml
<CustomObject>
    <description>Page that can be built by customer to show to user to purchase items.</description>
    <label>Campaign Page</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Campaign Page ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>