unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Event that this campaign page will allow registration on</description>
    <inlineHelpText>Event that this campaign page will allow registration on</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Campaign Pages</relationshipLabel>
    <relationshipName>Campaign_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>