unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Average_Sale__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Average_Sale__c</fullName>
    <description>** System Calculated ** Total Revenue / Sales</description>
    <formula>if( OrderApi__Sales__c == 0,0, OrderApi__Total_Revenue__c / OrderApi__Sales__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Total Revenue / Sales</inlineHelpText>
    <label>Average Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>