unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Average_Visitor_Value__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Average_Visitor_Value__c</fullName>
    <description>** System Calculated ** Total Revenue / Visits.</description>
    <formula>if( OrderApi__Visits__c ==0,0, OrderApi__Total_Revenue__c /OrderApi__Visits__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Total Revenue / Visits.</inlineHelpText>
    <label>Average Visitor Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>