unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Campaign Pages</relationshipLabel>
    <relationshipName>Campaign_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>