unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Conversion_Rate__c</fullName>
    <description>** System Calculated ** Sales / Visits</description>
    <formula>if( OrderApi__Visits__c ==0,0, OrderApi__Sales__c / OrderApi__Visits__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Sales / Visits</inlineHelpText>
    <label>Conversions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>