unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>The description for the Campaign page record</description>
    <inlineHelpText>Please enter a description for the Campaign Page</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>