unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Expenses__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Expenses__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Enter expenses to track ROI</description>
    <inlineHelpText>Enter expenses to track ROI</inlineHelpText>
    <label>Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>