unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Goal__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Goal__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Enter a revenue goal for the campaign page.</description>
    <inlineHelpText>Enter a revenue goal for the campaign page.</inlineHelpText>
    <label>Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>