unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Header_Content__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Header_Content__c</fullName>
    <description>Custom HTML rendered in the header of the page.</description>
    <inlineHelpText>Custom HTML rendered in the header of the page.</inlineHelpText>
    <label>Header Content</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>