unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag that specifies if the page is available for use</description>
    <inlineHelpText>Set this box to true to make the page available for use</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>