unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Name__c</fullName>
    <description>The name of the Campaign</description>
    <inlineHelpText>Please provide a unique name for the campaign</inlineHelpText>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>