unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SYSTEM</label>
    <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Campaign Pages</relationshipLabel>
    <relationshipName>Campaign_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>