unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__ROI__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__ROI__c</fullName>
    <description>** System Calculated ** Total Revenue - Expenses.</description>
    <formula>OrderApi__Total_Revenue__c - OrderApi__Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Total Revenue - Expenses.</inlineHelpText>
    <label>ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>