unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Sales__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** System Calculated ** Number of sales orders generated.</description>
    <inlineHelpText>** System Calculated ** Number of sales orders generated.</inlineHelpText>
    <label>Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>