unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Shopping_Cart_Enabled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shopping_Cart_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the page will auto-integrate with the shopping cart configured for the related Store configuration.</description>
    <inlineHelpText>When checked, the page will auto-integrate with the shopping cart configured for the related Store configuration.</inlineHelpText>
    <label>Shopping Cart Enabled</label>
    <type>Checkbox</type>
</CustomField>