unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Site__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the Site to use for page styles and Store</description>
    <inlineHelpText>** Required ** Link to the Site to use for page styles and Store</inlineHelpText>
    <label>SYSTEM</label>
    <referenceTo>PagesApi__Site__c</referenceTo>
    <relationshipLabel>Campaign Pages</relationshipLabel>
    <relationshipName>Campaign_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>