unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Source_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Source_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional Source Code to tag all transactions generated from the page.</description>
    <inlineHelpText>Optional Source Code to tag all transactions generated from the page.</inlineHelpText>
    <label>Source Code</label>
    <referenceTo>OrderApi__Source_Code__c</referenceTo>
    <relationshipLabel>Campaign Pages</relationshipLabel>
    <relationshipName>Campaign_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>