unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Store__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Link to the Store configuration to use if the page has the &quot;Shopping Cart Enabled&quot; checkbox checked.</description>
    <inlineHelpText>** Conditionally Required ** Link to the Store configuration to use if the page has the &quot;Shopping Cart Enabled&quot; checkbox checked.</inlineHelpText>
    <label>SYSTEM</label>
    <referenceTo>OrderApi__Store__c</referenceTo>
    <relationshipLabel>Campaign Pages</relationshipLabel>
    <relationshipName>Campaign_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>