unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Theme__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the Theme to use for the page styles.</description>
    <inlineHelpText>** Required ** Link to the Theme to use for the page styles.</inlineHelpText>
    <label>SYSTEM</label>
    <referenceTo>PagesApi__Theme__c</referenceTo>
    <relationshipLabel>Campaign Pages</relationshipLabel>
    <relationshipName>Campaign_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>