unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Title_Tag__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Title_Tag__c</fullName>
    <description>Used as the content of the HTML title attribute for the rendered page.</description>
    <inlineHelpText>Used as the content of the HTML title attribute for the rendered page.</inlineHelpText>
    <label>Title Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>