unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total_Revenue__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>** System Calculated ** Total sales generated from the page.</description>
    <inlineHelpText>** System Calculated ** Total sales generated from the page.</inlineHelpText>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>