unpackaged/main/default/objects/OrderApi__Campaign_Page__c/fields/OrderApi__Visits__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** System Calculated ** Number of times people have viewed the campaign page - Does not calculate visits from the page preview mode button.</description>
    <inlineHelpText>** System Calculated ** Number of times people have viewed the campaign page - Does not calculate visits from the page preview mode button.</inlineHelpText>
    <label>Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>