unpackaged/main/default/objects/OrderApi__Campaign_Page__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Name__c</columns>
    <columns>OrderApi__Is_Published__c</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Source_Code__c</columns>
    <columns>OrderApi__Visits__c</columns>
    <columns>OrderApi__Average_Sale__c</columns>
    <columns>OrderApi__Expenses__c</columns>
    <columns>OrderApi__Total_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>